tests/NormalTests/paczka1/small_fuzzy/38879971.err
Error in line 4: ZzBo2FCE S453 -5,0
Error in line 3: ZzBo2FCE S453 83,4
Error in line 10: BRT5GY4xX A881 44,6
